typescript/checker/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            57,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts:3:19
  |
3 | class C4a extends void {}
  |                   ^^^^

